<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/myNumber"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:digits="0123456789."
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/workoutGrid"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:numColumns="4"
        android:columnWidth="@android:dimen/thumbnail_width"
        android:stretchMode="columnWidth"
        android:verticalSpacing="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myNumber"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/jumpToHighLevel"
        android:layout_width="53dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/button_view_all"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/myNumber"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/prevDay"
        android:layout_width="49dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lt"
        app:layout_constraintBottom_toBottomOf="@+id/myNumber"
        app:layout_constraintEnd_toStartOf="@+id/myNumber" />

    <Button
        android:id="@+id/nextDay"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gt"
        app:layout_constraintBottom_toBottomOf="@+id/myNumber"
        app:layout_constraintStart_toEndOf="@+id/myNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>